<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E43E3E"
    android:paddingHorizontal="30dp"
    android:paddingTop="30dp"
    tools:context=".java.login_page"
>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/famous"
        android:textColor="#FEF9EA"
        android:fontFamily="cursive"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
/>
    <EditText
        android:id="@+id/email_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="#FEF9EA"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FEF9EA"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/text_view_title"

        />
    <EditText
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:backgroundTint="#FEF9EA"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FEF9EA"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/email_form"

        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CC1C1C"
        android:text="@string/login"
        android:textColor="#FEF9EA"
        android:layout_marginTop="50dp"

        android:layout_below="@+id/password_form"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:text="@string/no_account_yet_create_one"
        android:textColor="#FEF9EA"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"

        />
</RelativeLayout>